--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,21 +3,62 @@ name: Build and push Docker image
 on:
   push:
     branches: [main]
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Check DockerHub credentials
+        id: check-dockerhub
+        run: |
+          if [ -n "${{ secrets.DOCKERHUB_USERNAME }}" ]; then
+            echo "DockerHub credentials found - will push image"
+            echo "push=true" >> $GITHUB_OUTPUT
+            echo "username=${{ secrets.DOCKERHUB_USERNAME }}" >> $GITHUB_OUTPUT
+          else
+            echo "No DockerHub credentials - will build only (no push)"
+            echo "push=false" >> $GITHUB_OUTPUT
+            echo "username=" >> $GITHUB_OUTPUT
+          fi
+
       - name: Log in to DockerHub
+        if: steps.check-dockerhub.outputs.push == 'true'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/booking_system:latest
+          push: ${{ steps.check-dockerhub.outputs.push }}
+          tags: |
+            ${{ steps.check-dockerhub.outputs.push == 'true' && format('{0}/booking-platform:latest', secrets.DOCKERHUB_USERNAME) || 'booking-platform:local' }}
+            ${{ steps.check-dockerhub.outputs.push == 'true' && format('{0}/booking-platform:{1}', secrets.DOCKERHUB_USERNAME, github.sha) || format('booking-platform:{0}', github.sha) }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            BUILD_DATE=${{ github.event.head_commit.timestamp }}
+            VCS_REF=${{ github.sha }}
+
+      - name: Build summary
+        run: |
+          echo "## 🐳 Docker Build Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **Status**: ✅ Build completed successfully" >> $GITHUB_STEP_SUMMARY
+          echo "- **Push to DockerHub**: ${{ steps.check-dockerhub.outputs.push == 'true' && 'Yes' || 'No (credentials not configured)' }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Commit SHA**: \`${{ github.sha }}\`" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ steps.check-dockerhub.outputs.push }}" == "true" ]; then
+            echo "- **Image Tags**: \`${{ secrets.DOCKERHUB_USERNAME }}/booking-platform:latest\`, \`${{ secrets.DOCKERHUB_USERNAME }}/booking-platform:${{ github.sha }}\`" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "- **Image Tag**: \`booking-platform:local\`, \`booking-platform:${{ github.sha }}\`" >> $GITHUB_STEP_SUMMARY
+          fi
